<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_my"
            android:title="@string/title_search" />

        <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_star"
            android:title="@string/title_favorite" />

        <item
            android:id="@+id/navigation_create"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/title_add" />

        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications" />

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/title_profile" />
    </group>
</menu>
